Fixed misaligned spinner icon for module settings

--- a/app/assets/stylesheets/koi/components/_table.scss
+++ b/app/assets/stylesheets/koi/components/_table.scss
@@ -170,6 +170,10 @@ table {
 .table__th__actions,
 .table--actions--container {
   text-align: right;
+
+  .icon-spinner {
+    margin-left: auto;
+  }
 }
 
 .table--image {
